--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color:#333;
 }
 
 code {
@@ -14,6 +15,11 @@ code {
 
 .loading {
   align-items: center;
+  color: #fff;
   display: flex;
   justify-content: center;
+}
+
+.text {
+  color: #fff;
 }
