--- a/src/style/header.css
+++ b/src/style/header.css
@@ -34,6 +34,7 @@
 .title-div {
   background-color: #fff;
   border-radius: 500px;
+  height: 25px;
   padding-left: 10px;
   padding-right: 10px;
 }
